@startuml
'left to right direction

interface AuthService {
    +UserAccessInfo authorizeUser(String username, String password)
}

class AuthServiceImpl {
    +UserAccessInfo authorizeUser(String username, String password)
}
AuthService <|.. AuthServiceImpl

interface AuthPort {
    +String getToken(String username, String password)
    +UserAccessInfo getRole(String username, String token)
}

AuthServiceImpl --> AuthPort: -authPort

class AuthPortWireMock {
    +String getToken(String username, String password)
    +UserAccessInfo getRole(String username, String token)
}

AuthPort <|.. AuthPortWireMock

class UserAccessInfo {
    +@JsonIgnore boolean access;
    +String role;
}

AuthServiceImpl --> UserAccessInfo

@enduml
